Fix profile spacing, short dates

--- a/frontend/src/assets/stylesheets/profile.css
+++ b/frontend/src/assets/stylesheets/profile.css
@@ -8,12 +8,16 @@
   top: 110px;
   height: 40px;
   margin-left: 15px;
+  margin-bottom: 45px;
   font-size: 25px;
   font-weight: bolder;
-  justify-content: center;
   color: black;
   font-family: 'Rubika', sans-serif;
   font-style: italic;
+}
+
+.profile-header-text {
+  margin-top: 0px;
 }
 
 .profile-container {
@@ -27,21 +31,21 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  z-index: -1;
-  margin-top: 50px;
-  margin-left: 30px;
-  margin-right: 30px;
   text-align: center;
 }
 
-.profile-margin {
-  height: 150px;
+.chart-container {
   width: 100%;
+  height: 400px;
+  box-sizing: border-box;
 }
 
-.pie-margin {
-  height: 80px;
+.chart-container-offset {
   width: 100%;
+  height: 400px;
+  box-sizing: border-box;
+  position: relative;
+  top: -100px;
 }
 
 .index-question-container2 {
